# ReWOG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  convert_normal_map.py  pyproject.toml  requirements.txt  wog_dump.py
runtime/: keys.txt  weapons.txt
src/wog_dump/: __init__.py
src/wog_dump/cli/: __init__.py  main.py
src/wog_dump/core/: __init__.py  config.py  decrypt.py  download.py  storage.py  unpack.py
src/wog_dump/utils/: __init__.py  logging.py  normal_map.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_decrypt.py  test_download.py  test_download_hashes.py.disabled  test_normal_map.py  test_storage.py
